# coding-rag

./: .gitignore  README.md  main.py  pyproject.toml
app/chunking/: chunker.py  chunks.json
app/core/: config.py
app/embeddings/: embedder.py
app/ingestion/: cleaner.py  filter.py  parser.py  scanner.py  sections.json
app/llm/: rag.py
app/retrieval/: bm25_search.py  hybrid_search.py  search.py
